force-app/main/default/objects/LeanData__Real_Time_Routing_Setting__c/LeanData__Real_Time_Routing_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Real Time Routing Setting</label>
</CustomObject>