force-app/main/default/objects/LeanData__Real_Time_Routing_Setting__c/fields/LeanData__CampaignMember_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LeanData__CampaignMember_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Deprecated Field</label>
    <type>Checkbox</type>
</CustomField>