force-app/main/default/objects/LeanData__Real_Time_Routing_Setting__c/fields/LeanData__CampaignMember_Update_Threshold__c.field-meta.xml
<CustomField>
    <fullName>LeanData__CampaignMember_Update_Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Campaign Member Update RTR Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>